fixed flex-wrap on project tags

--- a/styles.css
+++ b/styles.css
@@ -216,6 +216,7 @@ body {
 
 #project-tags {
     display: flex;
+    flex-wrap: wrap;
     gap: 1vh;
     padding-bottom: 3vh;
 
